--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.txt
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Output of the pprof tool
+*.prof
